@@ -16,11 +16,11 @@
  */
 package org.apache.solr.core;
 
-import static java.util.Collections.singletonMap;
 import static org.apache.solr.api.ApiBag.HANDLER_NAME;
 
 import java.io.IOException;
 import java.lang.invoke.MethodHandles;
+import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.HashMap;
@@ -41,7 +41,6 @@ import org.apache.solr.api.JerseyResource;
 import org.apache.solr.common.SolrException;
 import org.apache.solr.common.util.StrUtils;
 import org.apache.solr.handler.RequestHandlerBase;
-import org.apache.solr.handler.api.V2ApiUtils;
 import org.apache.solr.handler.component.SearchComponent;
 import org.apache.solr.jersey.APIConfigProvider;
 import org.apache.solr.jersey.APIConfigProviderBinder;
@@ -59,13 +58,18 @@ import org.slf4j.LoggerFactory;
 public class PluginBag<T> implements AutoCloseable {
   private static final Logger log = LoggerFactory.getLogger(MethodHandles.lookup().lookupClass());
 
-  private final Map<String, PluginHolder<T>> registry;
-  private final Map<String, PluginHolder<T>> immutableRegistry;
-  private String def;
+  // === Common to both V1 and V2 APIs ===
   private final Class<T> klass;
   private SolrCore core;
   private final SolrConfig.SolrPluginInfo meta;
+  private final List<PluginHolder<T>> allPlugins;
 
+  // === V1 ===
+  private final Map<String, PluginHolder<T>> registry;
+  private final Map<String, PluginHolder<T>> immutableRegistry;
+  private String def;
+
+  // === V2 ===
   private final boolean loadV2ApisIfPresent;
   private final ApiBag apiBag;
   private final ResourceConfig jerseyResources;
@@ -89,7 +93,7 @@ public class PluginBag<T> implements AutoCloseable {
 
   /** Pass needThreadSafety=true if plugins can be added and removed concurrently with lookups. */
   public PluginBag(Class<T> klass, SolrCore core, boolean needThreadSafety) {
-    if (klass == SolrRequestHandler.class && V2ApiUtils.isEnabled()) {
+    if (klass == SolrRequestHandler.class) {
       this.loadV2ApisIfPresent = true;
       this.apiBag = new ApiBag(core != null);
       this.jaxrsResourceRegistry = new JaxrsResourceToHandlerMappings();
@@ -112,6 +116,8 @@ public class PluginBag<T> implements AutoCloseable {
     // implementations depending on thread safety needs.
     this.registry = needThreadSafety ? new ConcurrentHashMap<>() : new HashMap<>();
     this.immutableRegistry = Collections.unmodifiableMap(registry);
+    this.allPlugins =
+        needThreadSafety ? Collections.synchronizedList(new ArrayList<>()) : new ArrayList<>();
     meta = SolrConfig.classVsSolrPluginInfo.get(klass.getName());
     if (meta == null) {
       throw new SolrException(
@@ -142,7 +148,7 @@ public class PluginBag<T> implements AutoCloseable {
 
   /** Check if any of the mentioned names are missing. If yes, return the Set of missing names */
   public Set<String> checkContains(Collection<String> names) {
-    if (names == null || names.isEmpty()) return Collections.emptySet();
+    if (names == null || names.isEmpty()) return Set.of();
     HashSet<String> result = new HashSet<>();
     for (String s : names) if (!this.registry.containsKey(s)) result.add(s);
     return result;
@@ -225,13 +231,13 @@ public class PluginBag<T> implements AutoCloseable {
 
   @SuppressWarnings({"unchecked"})
   public PluginHolder<T> put(String name, PluginHolder<T> plugin) {
-    Boolean registerApi = null;
-    Boolean disableHandler = null;
+    Boolean registerApi = null; // i.e. register for V2
+    Boolean disableV1 = null; // i.e. do *not* register for v1
     if (plugin.pluginInfo != null) {
       String registerAt = plugin.pluginInfo.attributes.get("registerPath");
       if (registerAt != null) {
         List<String> strs = StrUtils.splitSmart(registerAt, ',');
-        disableHandler = !strs.contains("/solr");
+        disableV1 = !strs.contains("/solr");
         registerApi = strs.contains("/v2");
       }
     }
@@ -241,12 +247,12 @@ public class PluginBag<T> implements AutoCloseable {
         T inst = plugin.get();
         if (inst instanceof ApiSupport apiSupport) {
           if (registerApi == null) registerApi = apiSupport.registerV2();
-          if (disableHandler == null) disableHandler = !apiSupport.registerV1();
+          if (disableV1 == null) disableV1 = !apiSupport.registerV1();
 
-          if (registerApi && V2ApiUtils.isEnabled()) {
+          if (registerApi) {
             Collection<Api> apis = apiSupport.getApis();
             if (apis != null) {
-              Map<String, String> nameSubstitutes = singletonMap(HANDLER_NAME, name);
+              Map<String, String> nameSubstitutes = Map.of(HANDLER_NAME, name);
               for (Api api : apis) {
                 apiBag.register(api, nameSubstitutes);
               }
@@ -281,13 +287,18 @@ public class PluginBag<T> implements AutoCloseable {
           apiBag.registerLazy((PluginHolder<SolrRequestHandler>) plugin, plugin.pluginInfo);
       }
     }
-    if (disableHandler == null) disableHandler = Boolean.FALSE;
+    if (disableV1 == null) disableV1 = Boolean.FALSE;
     PluginHolder<T> old = null;
-    if (!disableHandler) old = registry.put(name, plugin);
+    if (!disableV1) {
+      old = registry.put(name, plugin);
+    }
+    allPlugins.add(plugin);
+
     if (plugin.pluginInfo != null && plugin.pluginInfo.isDefault()) setDefault(name);
     if (plugin.isLoaded()) registerMBean(plugin.get(), core, name);
     // old instance has been replaced - close it to prevent mem leaks
     if (old != null && old != plugin) {
+      allPlugins.remove(old);
       closeQuietly(old);
     }
     return old;
@@ -374,11 +385,11 @@ public class PluginBag<T> implements AutoCloseable {
   /** Close this registry. This will in turn call a close on all the contained plugins */
   @Override
   public void close() {
-    for (Map.Entry<String, PluginHolder<T>> e : registry.entrySet()) {
+    for (PluginHolder<T> holder : allPlugins) {
       try {
-        e.getValue().close();
+        holder.close();
       } catch (Exception exp) {
-        log.error("Error closing plugin {} of type : {}", e.getKey(), meta.getCleanTag(), exp);
+        log.error("Error closing plugin of type : {}", meta.getCleanTag(), exp);
       }
     }
   }
@@ -402,8 +413,7 @@ public class PluginBag<T> implements AutoCloseable {
 
     public PluginHolder(T inst, SolrConfig.SolrPluginInfo info) {
       this.inst = inst;
-      pluginInfo =
-          new PluginInfo(info.tag, Collections.singletonMap("class", inst.getClass().getName()));
+      pluginInfo = new PluginInfo(info.tag, Map.of("class", inst.getClass().getName()));
     }
 
     public PluginHolder(PluginInfo info) {
