@@ -19,7 +19,6 @@ package org.apache.solr.handler.loader;
 import java.io.EOFException;
 import java.io.IOException;
 import java.io.InputStream;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Map.Entry;
@@ -179,7 +178,7 @@ public class JavabinLoader extends ContentStreamLoader {
                 }
               }
             }
-            return Collections.emptyList();
+            return List.of();
           }
         }) {
       jbc.unmarshal(in);
