@@ -46,7 +46,7 @@ public final class SchemaField extends FieldProperties implements IndexableField
   boolean required = false; // this can't be final since it may be changed dynamically
 
   /** Declared field property overrides */
-  Map<String, Object> args = Collections.emptyMap();
+  Map<String, Object> args = Map.of();
 
   /**
    * Create a new SchemaField with the given name and type, using all the default properties from
