@@ -182,7 +182,7 @@ public class MoveReplicaTest extends SolrCloudTestCase {
           if (!r.getNodeName().equals(targetNode)) {
             continue;
           }
-          if (!r.isActive(Collections.singleton(targetNode))) {
+          if (!r.isActive(Set.of(targetNode))) {
             log.info("Not active: {}", r);
             allActive = false;
           }
@@ -227,7 +227,7 @@ public class MoveReplicaTest extends SolrCloudTestCase {
           if (!r.getNodeName().equals(replica.getNodeName())) {
             continue;
           }
-          if (!r.isActive(Collections.singleton(replica.getNodeName()))) {
+          if (!r.isActive(Set.of(replica.getNodeName()))) {
             log.info("Not active yet: {}", r);
             allActive = false;
           }
@@ -342,9 +342,9 @@ public class MoveReplicaTest extends SolrCloudTestCase {
   }
 
   private Replica getRandomReplica(String coll, CloudSolrClient cloudClient) throws IOException {
-    List<Replica> replicas = cloudClient.getClusterState().getCollection(coll).getReplicas();
-    Collections.shuffle(replicas, random());
-    return replicas.get(0);
+    List<Replica> replicas =
+        cloudClient.getClusterState().getCollection(coll).replicaStream().toList();
+    return replicas.get(random().nextInt(replicas.size()));
   }
 
   private void checkNumOfCores(
