@@ -26,9 +26,9 @@ import java.io.IOException;
 import java.io.Reader;
 import java.io.StringReader;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.Locale;
+import java.util.Set;
 import javax.xml.parsers.DocumentBuilder;
 import javax.xml.parsers.DocumentBuilderFactory;
 import org.apache.lucene.analysis.charfilter.HTMLStripCharFilter;
@@ -102,7 +102,7 @@ public class XmlInterpolationTest extends TaggerTestCase {
 
   protected void assertXmlTag(String docText, boolean expected) throws Exception {
     try (SolrQueryRequest req = reqDoc(docText)) {
-      final SolrQueryResponse rsp = h.queryAndResponse(req.getParams().get("qt"), req);
+      final SolrQueryResponse rsp = h.queryAndResponse(HANDLER, req);
       final TestTag[] testTags = pullTagsFromResponse(req, rsp);
       if (!expected) {
         assertEquals(0, testTags.length);
@@ -203,8 +203,7 @@ public class XmlInterpolationTest extends TaggerTestCase {
   private String[] analyzeReturnTokens(String docText) {
     List<String> result = new ArrayList<>();
 
-    Reader filter =
-        new HTMLStripCharFilter(new StringReader(docText), Collections.singleton("unescaped"));
+    Reader filter = new HTMLStripCharFilter(new StringReader(docText), Set.of("unescaped"));
     WhitespaceTokenizer ts = new WhitespaceTokenizer();
     final CharTermAttribute termAttribute = ts.addAttribute(CharTermAttribute.class);
     try {
