@@ -27,6 +27,7 @@ import java.util.List;
 import java.util.Locale;
 import java.util.Map;
 import java.util.Random;
+import java.util.Set;
 import java.util.concurrent.atomic.AtomicLong;
 import org.apache.lucene.tests.util.LuceneTestCase;
 import org.apache.solr.JSONTestUtil;
@@ -38,6 +39,8 @@ import org.apache.solr.common.params.ModifiableSolrParams;
 import org.apache.solr.common.params.SolrParams;
 import org.apache.solr.request.SolrQueryRequest;
 import org.apache.solr.request.macro.MacroExpander;
+import org.apache.solr.security.AllowListUrlChecker;
+import org.apache.solr.util.ErrorLogMuter;
 import org.apache.solr.util.hll.HLL;
 import org.junit.AfterClass;
 import org.junit.BeforeClass;
@@ -63,10 +66,9 @@ public class TestJsonFacets extends SolrTestCaseHS {
   private static int origTableSize;
   private static FacetField.FacetMethod origDefaultFacetMethod;
 
-  @SuppressWarnings("deprecation")
   @BeforeClass
   public static void beforeTests() throws Exception {
-    systemSetPropertyEnableUrlAllowList(false);
+    System.setProperty(AllowListUrlChecker.ENABLE_URL_ALLOW_LIST, "false");
     JSONTestUtil.failRepeatedKeys = true;
 
     origTableSize = FacetFieldProcessorByHashDV.MAXIMUM_STARTING_TABLE_SIZE;
@@ -90,10 +92,8 @@ public class TestJsonFacets extends SolrTestCaseHS {
     }
   }
 
-  @SuppressWarnings("deprecation")
   @AfterClass
   public static void afterTests() throws Exception {
-    systemClearPropertySolrEnableUrlAllowList();
     JSONTestUtil.failRepeatedKeys = false;
     FacetFieldProcessorByHashDV.MAXIMUM_STARTING_TABLE_SIZE = origTableSize;
     FacetField.FacetMethod.DEFAULT_METHOD = origDefaultFacetMethod;
@@ -112,7 +112,7 @@ public class TestJsonFacets extends SolrTestCaseHS {
   @ParametersFactory
   public static Iterable<Object[]> parameters() {
     if (null != TEST_ONLY_ONE_FACET_METHOD) {
-      return Collections.singleton(new Object[] {TEST_ONLY_ONE_FACET_METHOD});
+      return Set.<Object[]>of(new Object[] {TEST_ONLY_ONE_FACET_METHOD});
     } else if (TEST_NIGHTLY) {
       // wrap each enum val in an Object[] and return as Iterable
       return () ->
@@ -123,8 +123,7 @@ public class TestJsonFacets extends SolrTestCaseHS {
 
       // can't use LuceneTestCase.random() because we're not in the runner context yet
       String seed = System.getProperty("tests.seed", "");
-      return Collections.singleton(
-          new Object[] {methods[Math.abs(seed.hashCode()) % methods.length]});
+      return Set.<Object[]>of(new Object[] {methods[Math.abs(seed.hashCode()) % methods.length]});
     }
   }
 
@@ -447,6 +446,7 @@ public class TestJsonFacets extends SolrTestCaseHS {
   }
 
   @Test
+  @SuppressWarnings("try")
   public void testExplicitQueryDomain() throws Exception {
     Client client = Client.localClient();
     indexSimple(client);
@@ -528,24 +528,26 @@ public class TestJsonFacets extends SolrTestCaseHS {
     }
 
     { // an (effectively) empty query should produce an error
-      ignoreException("'query' domain can not be null");
-      ignoreException("'query' domain must not evaluate to an empty list");
-      for (String raw : Arrays.asList("null", "[ ]", "{param:bogus}")) {
-        expectThrows(
-            SolrException.class,
-            () -> {
-              assertJQ(
-                  req(
-                      "rows",
-                      "0",
-                      "q",
-                      "num_i:[0 TO *]",
-                      "json.facet",
-                      "{w: {type:terms, field:'where_s', "
-                          + "     facet: { c: { type:terms, field:'cat_s', domain: { query: "
-                          + raw
-                          + " }}}}}"));
-            });
+      try (ErrorLogMuter queryDomainNull = ErrorLogMuter.regex("'query' domain can not be null");
+          ErrorLogMuter queryDomainEmpty =
+              ErrorLogMuter.regex("'query' domain must not evaluate to an empty list")) {
+        for (String raw : Arrays.asList("null", "[ ]", "{param:bogus}")) {
+          expectThrows(
+              SolrException.class,
+              () -> {
+                assertJQ(
+                    req(
+                        "rows",
+                        "0",
+                        "q",
+                        "num_i:[0 TO *]",
+                        "json.facet",
+                        "{w: {type:terms, field:'where_s', "
+                            + "     facet: { c: { type:terms, field:'cat_s', domain: { query: "
+                            + raw
+                            + " }}}}}"));
+              });
+        }
       }
     }
   }
@@ -1446,10 +1448,10 @@ public class TestJsonFacets extends SolrTestCaseHS {
 
   List<String> getAlternatives(String field) {
     int idx = field.lastIndexOf('_');
-    if (idx <= 0 || idx >= field.length()) return Collections.singletonList(field);
+    if (idx <= 0 || idx >= field.length()) return List.of(field);
     String suffix = field.substring(idx);
     String[] alternativeSuffixes = suffixMap.get(suffix);
-    if (alternativeSuffixes == null) return Collections.singletonList(field);
+    if (alternativeSuffixes == null) return List.of(field);
     String base = field.substring(0, idx);
     List<String> out = new ArrayList<>(alternativeSuffixes.length);
     for (String altS : alternativeSuffixes) {
