@@ -16,7 +16,6 @@
  */
 package org.apache.solr.client.solrj;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import org.apache.solr.common.SolrErrorWrappingException;
@@ -64,15 +63,14 @@ public final class RemoteSolrException extends SolrException {
   public RemoteSolrException(String remoteHost, int code, Object remoteError, boolean skipRetry) {
     super(ErrorCode.getErrorCode(code), "Error from server at " + remoteHost);
     this.skipRetry = skipRetry;
-    setDetails(List.of(Map.of("remoteHost", remoteHost, "remoteError", remoteError)));
+    setDetails(List.of(Utils.makeMap("remoteHost", remoteHost, "remoteError", remoteError)));
     if (remoteError != null) {
       String remoteErrorMessageSuffix = getRemoteErrorMessageSuffix(remoteError, "");
       if (remoteErrorMessageSuffix.length() > 2) {
         this.remoteErrorMessageSuffix = remoteErrorMessageSuffix;
       }
 
-      Object metadataObj =
-          Utils.getObjectByPath(remoteError, false, Collections.singletonList("metadata"));
+      Object metadataObj = Utils.getObjectByPath(remoteError, false, List.of("metadata"));
       if (metadataObj instanceof NamedList) {
         setMetadata((NamedList<String>) metadataObj);
       } else if (metadataObj instanceof List) {
